fix(android): enforce api26-compatible runtime APIs